# fastapi

./: .env  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 11459f6d2636_add_content_column_to_post_table.py  1275abf9f681_add_foreign_key_to_post_table.py  8a98c2a1fb8f_add_last_few_columns_to_post_table.py  ecbc91facc3d_create_post_table.py  ef25e1f0455f_auto_vote.py  ef3558c3588f_add_user_table.py
src/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
src/routers/: auth.py  post.py  user.py  vote.py
